# Support

./: .flake8  .pre-commit-config.yaml  Dockerfile  README  README.md  dev.env.template  docker-compose.yaml  email_templ  entrypoint.sh  manage.py  pyproject.toml
Support_test/: __init__.py  asgi.py  celery_settings.py  dev.env  settings.py  urls.py  wsgi.py
chat/: admin.py  helpers.py  models.py  serializers.py  tasks.py  urls.py  views.py
message/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  backends.py  models.py  renderers.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
